--- a/src/app/update-advert/update-advert.component.html
+++ b/src/app/update-advert/update-advert.component.html
@@ -13,7 +13,6 @@
   <div class="card">
     <div class="card-body">
       <h4 class="card-title">Update Advert</h4>
-    
       <form class="forms-sample">
         <div class="form-group">
           <label for="exampleInputName1">Advert Title</label>
@@ -77,10 +76,11 @@
           <label for="exampleTextarea1">Address</label>
           <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
         </div>
-        
         <button type="submit" class="btn btn-gradient-primary mr-2">Update</button>
         <button class="btn btn-light">Cancel</button>
       </form>
     </div>
   </div>
 </div>
+
+<notifier-container></notifier-container>
