--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -7,72 +7,58 @@
     </ol>
   </nav>
 </div>
-
 <div class="col-12 grid-margin stretch-card">
   <div class="card">
     <div class="card-body ">
       <h2 style="text-align: center;" class="card-title">
         {{response.data.advertisementTitle}}</h2>
-        <p style="text-align: left;">{{response.data.advEntryDate}}</p>
-        
-        <span [ngSwitch]="response.data.status">
-          <span style="float:right;" class="badge badge-pill badge-success"*ngSwitchCase="0"> deneme 1</span>
-          <span style="justify-content: right;" class="badge badge-pill badge-info" *ngSwitchCase="1"> deneme 2</span>
-          <span style="justify-content: right;" class="badge badge-pill badge-danger" *ngSwitchCase="2"> deneme 3</span>
-        </span>
-      
+      <p style="text-align: left;">{{response.data.advEntryDate}}</p>
+      <span [ngSwitch]="response.data.status">
+        <span style="float:right;" class="badge badge-pill badge-success" *ngSwitchCase="0"> deneme 1</span>
+        <span style="justify-content: right;" class="badge badge-pill badge-info" *ngSwitchCase="1"> deneme 2</span>
+        <span style="justify-content: right;" class="badge badge-pill badge-danger" *ngSwitchCase="2"> deneme 3</span>
+      </span>
       <hr>
-
-      
-
-      
       <div class="container">
-        
         <div class="row">
           <div class="col">
-            <ng-image-slider  [images]="imageObject" #nav></ng-image-slider>
+            <ng-image-slider [images]="imageObject" #nav></ng-image-slider>
           </div>
-        </div>   
+        </div>
         <br>
         <div class="row">
-
-          <div  style="width: 91%; text-align: left;" class="card" >
+          <div style="width: 91%; text-align: left;" class="card">
             <div style=" border: 1px solid gray;
             border-radius: 5px;" class="card-body">
-              <b><h4 class="card-title">Explanation</h4></b>
-              
-                <p>{{response.data.advertisementExplanation}}</p>
+              <b>
+                <h4 class="card-title">Explanation</h4>
+              </b>
+              <p>{{response.data.advertisementExplanation}}</p>
             </div>
           </div>
-
-
-
-          
-                  
-                  
-              </div>
-            
-        
+        </div>
         <br>
         <div class="row">
           <div class="col">
-            <div  class="card" >
+            <div class="card">
               <div style=" border: 1px solid gray;
               border-radius: 5px;" class="card-body">
-                <b><h4 class="card-title">Animal Informations</h4></b>
-                
-                  <p><b>Age</b><br>{{response.data.advertisementAnimal.age}} </p>
-                  <p><b>Genre</b><br>{{response.data.advertisementAnimal.genre}}</p>
-                  <p><b>Gender</b><br>{{response.data.advertisementAnimal.gender}}</p>
+                <b>
+                  <h4 class="card-title">Animal Informations</h4>
+                </b>
+                <p><b>Age</b><br>{{response.data.advertisementAnimal.age}} </p>
+                <p><b>Genre</b><br>{{response.data.advertisementAnimal.genre}}</p>
+                <p><b>Gender</b><br>{{response.data.advertisementAnimal.gender}}</p>
               </div>
             </div>
           </div>
           <div class="col">
-            <div  class="card" >
+            <div class="card">
               <div style=" border: 1px solid gray;
-              border-radius: 5px;"  class="card-body">
-                <b><h4 class="card-title">Owner Informations</h4></b>
-                
+              border-radius: 5px;" class="card-body">
+                <b>
+                  <h4 class="card-title">Owner Informations</h4>
+                </b>
                 <p><b>Owner Name</b><br>{{response.data.ownerUser.personName}}
                   {{response.data.ownerUser.personLastName}}</p>
                 <p><b>Owner E-Mail</b><br>{{response.data.ownerUser.personEmail}}</p>
@@ -81,23 +67,22 @@
             </div>
           </div>
           <div class="col">
-            <div class="card" >
+            <div class="card">
               <div style=" border: 1px solid gray;
               border-radius: 5px;" class="card-body">
-                <b><h4 class="card-title">Adress Informations</h4></b>
-                
+                <b>
+                  <h4 class="card-title">Adress Informations</h4>
+                </b>
                 <p><b>Province</b><br>{{response.data.advertisementAddress.province}}</p>
-                  <p><b>District</b><br>{{response.data.advertisementAddress.district}}</p>
-                  <p><b>FullAddress</b><br>{{response.data.advertisementAddress.fullAddress}}</p>
+                <p><b>District</b><br>{{response.data.advertisementAddress.district}}</p>
+                <p><b>FullAddress</b><br>{{response.data.advertisementAddress.fullAddress}}</p>
               </div>
             </div>
           </div>
-          
-       
-      
-
-
-
-
+        </div>
+      </div>
     </div>
   </div>
+</div>
+
+<notifier-container></notifier-container>
