--- a/src/app/advert/advert.component.html
+++ b/src/app/advert/advert.component.html
@@ -11,11 +11,8 @@
 </div>
 
 <div class="col-lg-12 grid-margin stretch-card">
-
   <div class="card">
-
     <div class="card-body">
-
       <h4 class="card-title">My Advert List</h4>
 
       <button type="button" id="add-advert" routerLink="/addAdvert" class="btn btn-inverse-success btn-fw">Add New
@@ -35,7 +32,6 @@
             </tr>
           </thead>
           <tbody>
-
             <tr *ngFor="let advert of model['data']">
               <td class="py-1" routerLink="/detailAdvert/{{advert.advertisementID}}">
                 <img src={{advert.advertisementAnimal.animalPhoto}} alt="image" />
@@ -55,15 +51,10 @@
               </td>
             </tr>
           </tbody>
-
         </table>
-
       </div>
-
     </div>
-
   </div>
-
 </div>
 
 
@@ -86,3 +77,5 @@
     </div>
   </div>
 </ng-template>
+
+<notifier-container></notifier-container>
