--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,8 @@
 
 /* === Layout === */
 @import "./assets/scss/layout";
+@import "~angular-notifier/styles";
+
 
 
 @import '~igniteui-angular/lib/core/styles/themes/index';
