--- a/src/app/update-advert/update-advert.component.html
+++ b/src/app/update-advert/update-advert.component.html
@@ -16,35 +16,32 @@
       <form class="forms-sample">
         <div class="form-group">
           <label for="exampleInputName1">Advert Title</label>
-          <input type="text" class="form-control" id="exampleInputName1">
+          <input type="text" class="form-control"  value={{model.data.advertisementTitle}}>
+          
         </div>
         <div class="form-group">
           <label for="exampleTextarea1">Advert Description</label>
-          <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+          <textarea class="form-control" value={{model.data.advertisementExplanation}} id="exampleTextarea1" rows="4"></textarea>
         </div>
         <div class="form-group">
           <label for="exampleInputName1">Animal Age</label>
-          <input type="numeric" class="form-control" id="exampleInputName1">
+          <input type="numeric" class="form-control"  value={{model.data.advertisementAnimal.age}}>
         </div>
         <div class="form-group">
           <label for="exampleInputName1">Animal Gender</label>
-          <input type="text" class="form-control" id="exampleInputName1">
+          <input type="text" class="form-control"  value={{model.data.advertisementAnimal.gender}}>
         </div>
         <div class="form-group">
           <label for="exampleInputName1">City</label>
-          <input type="text" class="form-control" id="exampleInputName1">
+          <input type="text" class="form-control"  value={{model.data.advertisementAddress.province}}>
         </div>
         <div class="form-group">
           <label for="exampleInputName1">District</label>
-          <input type="numeric" class="form-control" id="exampleInputName1">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputName1">Street</label>
-          <input type="text" class="form-control" id="exampleInputName1">
+          <input type="numeric" class="form-control"  value={{model.data.advertisementAddress.district}}>
         </div>
         <div class="form-group">
           <label for="exampleTextarea1">Address</label>
-          <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+          <textarea class="form-control"  value={{model.data.advertisementAddress.fullAddress}} rows="4"></textarea>
         </div>
         <button type="submit" class="btn btn-gradient-primary mr-2">Update</button>
         <button class="btn btn-light">Cancel</button>
