--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -21,7 +21,7 @@
     <li class="nav-item" [ngClass]="{ 'active': advert.isActive }">
       <a class="nav-link" routerLink="/advert" routerLinkActive #advert="routerLinkActive">
         <span class="menu-title">Advert</span>
-        <i class="mdi mdi-home menu-icon"></i>
+        <i class="mdi mdi mdi-book-open-variant menu-icon"></i>
       </a>
     </li>
 
