--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -81,6 +81,89 @@
           </div>
         </div>
       </div>
+
+
+     
+      
+
     </div>
   </div>
+</div>
+
+<br>
+
+<div class="col-12 grid-margin stretch-card">
+  <div style="justify-content: left;" class="card">
+    <div style="justify-content: left;" class="card-body ">
+      <h2 style="text-align: center;" class="card-title">
+        Comments</h2>
+
+      <div class="comment_block">
+
+         <div class="create_new_comment">
+           <div class="user_avatar">
+             <img src="https://s3.amazonaws.com/uifaces/faces/twitter/ManikRathee/73.jpg">
+           </div>
+           <div class="input_comment">
+             <input type="text" placeholder="Write your comment.">
+             <input type="button" style="height: 30px; width: 25%; float: right;" class="btn btn-primary btn-lg btn-block" value="Share" placeholder="Write your comment.">
+           </div>
+         </div>
+    
+         <div class="new_comment">
+           <ul class="user_comment">
+             <div class="user_avatar">
+               <img src="https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/73.jpg">
+             </div>
+             <div class="comment_body">
+               <p>Gastropub cardigan jean shorts, kogi Godard PBR&B lo-fi locavore. Organic chillwave vinyl Neutra. Bushwick Helvetica cred freegan, crucifix Godard craft beer deep v mixtape cornhole Truffaut master cleanse pour-over Odd Future beard. Portland polaroid iPhone.</p>
+             </div>
+             <div class="comment_toolbar">
+               <div class="comment_details">
+                 <ul>
+                   <li><i class="fa fa-clock-o"></i> 13:94</li>
+                   <li><i class="fa fa-calendar"></i> 04/01/2015</li>
+                   <li><i class="fa fa-pencil"></i> <span class="user">John Smith</span></li>
+                 </ul>
+               </div>
+               <div class="comment_tools">
+                 <ul>
+                   <li><i class="fa fa-share-alt"></i></li>
+                   <li><i class="fa fa-reply"></i></li>
+                   <li><i class="fa fa-heart love"></i></li>
+                 </ul>
+               </div>
+             </div>
+            </ul> 
+            </div>
+
+         <div class="new_comment">
+           <ul class="user_comment">
+             <div class="user_avatar">
+               <img src="https://s3.amazonaws.com/uifaces/faces/twitter/kfriedson/73.jpg">
+             </div>
+             <div class="comment_body">
+               <p>Gastropub cardigan jean shorts, kogi Godard PBR&B lo-fi locavore. Organic chillwave vinyl Neutra. Bushwick Helvetica cred freegan, crucifix Godard craft beer deep v mixtape cornhole Truffaut master cleanse pour-over Odd Future beard. Portland polaroid iPhone.</p>
+             </div> 
+             <div class="comment_toolbar">
+               <div class="comment_details">
+                 <ul>
+                   <li><i class="fa fa-clock-o"></i> 13:94</li>
+                   <li><i class="fa fa-calendar"></i> 04/01/2015</li>
+                   <li><i class="fa fa-pencil"></i> <span class="user">John Smith</span></li>
+                 </ul>
+               </div>
+               <div class="comment_tools">
+                 <ul>
+                   <li><i class="fa fa-share-alt"></i></li>
+                   <li><i class="fa fa-reply"></i></li>
+                   <li><i class="fa fa-heart love"></i></li>
+                 </ul>
+               </div>
+             </div>
+            </ul> 
+            </div>
+
+</div>
+</div>
 </div>
