fix: fix commet add input check

--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -100,8 +100,8 @@
              <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
            </div>
            <div class="input_comment">
-             <input #comment type="text" placeholder="Write your comment.">
-             <input (click)="createComment(comment.value)" type="button" style="height: 30px; width: 25%; float: right;" class="btn btn-primary btn-lg btn-block" value="Share" placeholder="Write your comment.">
+             <input #comment type="text" id="comment" placeholder="Write your comment.">
+             <input (click)="createComment(comment.value)"  type="button" style="height: 30px; width: 25%; float: right;" class="btn btn-primary btn-lg btn-block" value="Share" placeholder="Write your comment.">
            </div>
          </div>
     
