--- a/src/app/advert-detail/advert-detail.component.html
+++ b/src/app/advert-detail/advert-detail.component.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h3 class="page-title">Advert</h3>
+  <h3 class="page-title" style="margin-bottom: 30px;">Advert</h3>
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a routerLink="/advert">Advert</a></li>
@@ -12,21 +12,26 @@
     <div class="card-body ">
       <h2 style="text-align: center;" class="card-title">
         {{response.data.advertisementTitle}}</h2>
-      <p style="text-align: left;">{{response.data.advEntryDate | date:'medium'}}</p>
-      <span [ngSwitch]="response.data.status">
-        <span style="float:right;" class="badge badge-pill badge-success" *ngSwitchCase="0">Waiting</span>
-        <span style="justify-content: right;" class="badge badge-pill badge-info" *ngSwitchCase="1">Completing</span>
-        <span style="justify-content: right;" class="badge badge-pill badge-danger" *ngSwitchCase="2">Needs More</span>
-      </span>
+      <div class=row style="margin-bottom: 0px;">
+        <div class="col-lg-11">
+          <p style="text-align: left;margin: 0px;">{{response.data.advEntryDate | date:'medium'}}</p>
+        </div>
+        <div class="col-lg-1" [ngSwitch]="response.data.status">
+          <div style="text-align: center;width: 100%; font-size: 14px;" class="badge badge-pill badge-success" *ngSwitchCase="0">Waiting</div>
+          <div style="text-align: center;width: 100%;" class="badge badge-pill badge-info" *ngSwitchCase="1">Completing</div>
+          <div style="text-align: center;width: 100%;" class="badge badge-pill badge-danger" *ngSwitchCase="2">Needs More</div>
+        </div>
+      </div>
       <hr>
+      <br>
       <div class="container">
-        <div class="row">
+        <div class="row" style="justify-content: left;">
           <div class="col">
             <ng-image-slider [images]="imageObject" #nav></ng-image-slider>
           </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row" style="justify-content: center;">
           <div style="width: 91%; text-align: left;" class="card">
             <div style=" border: 1px solid gray;
             border-radius: 5px;" class="card-body">
@@ -38,7 +43,7 @@
           </div>
         </div>
         <br>
-        <div class="row">
+        <div class="row" style="justify-content: center;margin-left: 5%;">
           <div class="col">
             <div class="card">
               <div style=" border: 1px solid gray;
@@ -95,42 +100,48 @@
         Comments</h2>
 
       <div class="comment_block">
-        <div class="create_new_comment">
-          <div class="user_avatar">
-            <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-          </div>
+        <div class="create_new_comment" >
+          <div style="margin-bottom: 50px;">
           <div class="input_comment">
-            <input #comment type="text" id="comment" placeholder="Write your comment.">
-            <input (click)="createComment(comment.value)" type="button" style="height: 30px; width: 25%; float: right;"
-              class="btn btn-primary btn-lg btn-block" value="Share" placeholder="Write your comment.">
+            <div class="row"  >
+              <div class="col-lg-10">
+                <input #comment type="text" id="comment" placeholder="Write your comment.">
+              </div>
+              <div class="col-lg-2">
+                <button (click)="createComment(comment.value)" class="btn btn-primary" style="height: 40px;">
+                  Share
+                </button>
+              </div>
+
+            </div>
           </div>
         </div>
-
-        <div *ngFor="let comment of response.data.comments; let index =  index" class="new_comment"  id='{{index}}'>
-          <ul class="user_comment">
-            <div class="user_avatar">
-              <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-            </div>
-            <div class="comment_body">
-              <p>{{comment.comment}}</p>
-            </div>
-            <div class="comment_toolbar">
-              <div class="comment_details">
-                <ul>
-
-                  <li><i class="fa fa-calendar"></i> {{comment.date}}</li>
-                  <li><i class="fa fa-pencil"></i> <span class="user">{{comment.personName}}
-                      {{comment.personLastName}}</span></li>
-                </ul>
+          <div *ngFor="let comment of response.data.comments; let index =  index" class="new_comment" id='{{index}}'>
+            <ul class="user_comment">
+              <div class="user_avatar">
+                <img src="https://img.icons8.com/bubbles/2x/user-male.png">
               </div>
-              <div class="comment_tools">
-                <ul>
-                  <li><i (click)="onRemove(index)" [hidden]="comment.isDeletable == false" class="fa fa-remove"></i></li>
-                </ul>
+              <div class="comment_body">
+                <p>{{comment.comment}}</p>
               </div>
-            </div>
-          </ul>
+              <div class="comment_toolbar">
+                <div class="comment_details">
+                  <ul>
+
+                    <li><i class="fa fa-calendar"></i> {{comment.date}}</li>
+                    <li><i class="fa fa-pencil"></i> <span class="user">{{comment.personName}}
+                        {{comment.personLastName}}</span></li>
+                  </ul>
+                </div>
+                <div class="comment_tools">
+                  <ul>
+                    <li><i (click)="onRemove(index)" [hidden]="comment.isDeletable == false" class="fa fa-remove"></i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
