--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,14 +24,14 @@
         <img style="width: 100%;" src={{data.advertisementAnimal.animalPhoto}}>
       </igx-card-media>
       <igx-card-header>
-        <div [ngSwitch]="data.status">
-          <div style="width: 70px; font-size: 12px;" class="badge badge-pill badge-success" *ngSwitchCase="0"> Waiting </div>
-          <div style="width: 70px; font-size: 12px;"  class="badge badge-pill badge-info" *ngSwitchCase="1"> Completing</div>
-          <div style="width: 70px; font-size: 12px;"  class="badge badge-pill badge-danger" *ngSwitchCase="2"> Needs More</div>
-        </div>
         <h3 igxCardHeaderTitle>{{data.advertisementTitle}}</h3>
       </igx-card-header>
-      <igx-card-content style="margin-left: 20px;">
+      <igx-card-content>
+        <span style="width: 90px; font-size: 12px;" class=" badge badge-pill badge-primary ">
+          {{data.advertisementAnimal.genre}}
+        </span>
+        <br>
+        <br>
         <span><b>Date</b>: {{data.date}}</span>
         <br>
         <br>
@@ -44,9 +44,12 @@
         <br>
         <span><b>Province</b>: {{data.advertisementAddress.province}}</span>
       </igx-card-content>
-      <igx-card-actions style="margin-left: 20px;">
-        <span style="width: 120px; font-size: 12px;" class=" badge badge-pill badge-primary ">
-          <b>{{data.advertisementAnimal.genre}}</b></span>
+      <igx-card-actions>
+        <div [ngSwitch]="data.status">
+          <div style="width: 100px; font-size: 13px;" class="badge badge-pill badge-success" *ngSwitchCase="0"><b> Waiting </b></div>
+          <div style="width: 100px; font-size: 13px;"  class="badge badge-pill badge-info" *ngSwitchCase="1"> Completing</div>
+          <div style="width: 100px; font-size: 13px;"  class="badge badge-pill badge-danger" *ngSwitchCase="2"> Needs More</div>
+        </div>
       </igx-card-actions>
     </igx-card>
   </div>
